--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.3",
     "vuex": "^4.1.0"
